--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.0.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
