--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ssm_crud?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    url: jdbc:mysql://localhost:3306/ssm_crud?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
     username: root
     password: qwerty1216
     type: org.apache.commons.dbcp2.BasicDataSource
@@ -9,8 +9,12 @@ spring:
       max-wait-millis: 10000
       min-idle: 5
       driver-class-name: com.mysql.cj.jdbc.Driver
-server:
-  port: 8081
+
+#server:
+#  port: 8081
+
 mybatis:
   mapper-locations: classpath:mapping/*.xml
-  config-location: classpath:mybatis-config.xml
+  configuration:
+    map-underscore-to-camel-case: true
+  type-aliases-package: me.chon.boot.bean
